--- a/Calculator/src/main/webapp/WEB-INF/log4j.properties
+++ b/Calculator/src/main/webapp/WEB-INF/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, logfile
+log4j.rootLogger=INFO, stdout, file
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 
@@ -10,11 +10,11 @@ log4j.appender.stdout.Target=System.out
 
 # overview log file
 
-log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender
 
-log4j.appender.logfile.File=D:\\LOG\\listGW.log
-log4j.appender.logfile.MaxFileSize=2048KB
+log4j.appender.file.File=D:\\LOG\\listGW.log
+log4j.appender.file.MaxFileSize=2048KB
 
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
 
-log4j.appender.logfile.layout.ConversionPattern=%d{dd/MM/yyyy h:mm} [%t] %p - <%m>%n
+log4j.appender.file.layout.ConversionPattern=%d{dd/MM/yyyy h:mm} [%t] %p - <%m>%n
